# kika-app

./: .gitignore  Dockerfile  README.md  backend-auth.spec  backend-core.spec  build.sh  build_binaries.sh  build_windows.bat  kika-api.spec  render.yaml  setup_workspace.sh  setup_workspace_windows.bat  start_app.sh  start_dev.sh  start_dev_windows.bat  tauri-update-key.pub
.github/workflows/: release.yml
backend-auth/: .env.sample  .gitignore  CLI_USAGE.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  alembic.ini  app.py  cli.py  db.py  emailer.py  entrypoint.sh  generate_secrets.sh  models.py  pyproject.toml  requirements.txt  run_server.py  schemas.py  security.py  settings.py
backend-auth/alembic/: env.py
backend-auth/alembic/versions/: 20240601_0001_init.py  20240601_0002_user_settings.py
backend-auth/routers/: __init__.py  auth.py  health.py  metrics.py  users.py
backend-auth/testing/: README.md  manage_api.sh  test_backend.sh  test_full_flow.sh  view_users.sh
backend-core/: app.py  requirements.txt  run_server.py  server.py
backend-core/app/: main.py  models.py
backend-core/app/routers/: ace.py  materials.py  plot.py
backend-core/app/services/: ace_service.py  detection_service.py  endf_service.py  material_service.py
docs/: ACE_VIEWER_IMPROVEMENTS.md  BUILD_AND_RELEASE.md  FRONTEND_DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PLOTTING_SYSTEM.md  PROGRESS.md  README.md  TESTING_GUIDE.md  WINDOWS_TESTING.md
frontend/: .gitignore  index.html  package.json  setup_dev_environment.sh  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  routes.tsx  theme.ts
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: ACEPlotViewer.tsx  AboutDialog.tsx  BackendStatus.tsx  ENDFPlotViewer.tsx  FileTypeSelectionDialog.tsx  FileUpload.tsx  FileWorkspace.tsx  Layout.tsx  PlotViewer.tsx  UpdateNotification.tsx
frontend/src/contexts/: AuthContext.tsx  FileWorkspaceContext.tsx  MaterialsContext.tsx
frontend/src/data/: presetMaterials.ts
frontend/src/pages/: ACEDataSection.tsx  ACEFilePage.tsx  ACEFiles.tsx  ACEPlotter.tsx  ACEViewer.tsx  ENDFDataSection.tsx  ENDFFilePage.tsx  ENDFFiles.tsx  ENDFPlotter.tsx  ENDFViewer.tsx  FileManager.tsx  Home.tsx  (+11 more)
kika-api/: README.md  requirements.txt
kika-api/app/: main.py  models.py
scripts/: generate_signing_keys.sh  kika_proxy_template.bat
(+20 files in other folders)
