[tool.poetry]
name = "kika-backend"
version = "0.1.0"
description = "Tiny FastAPI backend for Streamlit client with email verification and metrics."
authors = ["Kika Backend Maintainers <maintainers@example.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = {version = "2.0.30", extras = ["asyncio"]}
asyncpg = "0.29.0"
alembic = "1.13.1"
pydantic-settings = "2.2.1"
itsdangerous = "2.1.2"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
email-validator = "2.1.1"
python-multipart = "0.0.9"
typer = {version = "0.12.3", extras = ["all"]}
python-dotenv = "1.0.1"
bcrypt = ">=4.0,<5.0"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
httpx = "^0.27.0"

[tool.poetry.scripts]
kika-backend-cli = "cli:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
